trying to remove vs code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "**/.gitmodules":true,
         "**/*.booproj":true,
         "**/*.pidb":true,
+        aosdifjasdf,
         "**/*.suo":true,
         "**/*.user":true,
         "**/*.userprefs":true,
